tests/typing/fail/star_in_array_literal_fail1.rb

x = [3,true]
[1,*x].[](2) + 2
